--- a/client/package.json
+++ b/client/package.json
@@ -7,16 +7,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "ajv-formats": "^3.0.1",
+    "chart.js": "^4.4.3",
     "font-awesome": "^4.7.0",
     "react": "^18.3.1",
-    "react-collapsed": "^4.1.2",
-    "react-custom-checkbox": "^3.1.5",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8"
